Fix tests after upgrading to latest getotools 27-SNAPSHOT